--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@nextui-org/react": "^2.4.6",
     "bootstrap": "^5.3.3",
     "flowbite": "^2.5.1",
+    "flowbite-react": "^0.10.1",
     "framer-motion": "^11.5.2",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.4",
